# 99-problems-ocaml

./: Readme.md  dune-project  problems_99.opam
.github/workflows/: workflow.yml
lib/: dune  exercism.ml  problems_99.ml
test/: dune  test_problems_99.ml
